cmake_minimum_required(VERSION 3.28)
project(CS50_Introduction C)

set(CMAKE_C_STANDARD 11)

add_executable(CS50_Introduction
#        problem1/me/hello.c
#        problem1/mario-less/mario.c
#        problem1/cash/cash.c
#        problem2/scrabble/scrabble.c
#        problem2/readability/readability.c
        problem2/caesar/caesar.c
)
